--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
     "dotenv": "^16.3.1",
+    "ionicons": "^7.1.2",
     "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
